059_put_together/grade.txt
Grading at 10/03/2018:05:56:10.204647
For commit ID 2277cbc757a2ff43b95c94698f9160a752756d4c
running passed-in stu_imp ./count_values
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 outname.c
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 counts.c
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 main.c
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 kv.c
kv.c: In function ‘getOne’:
kv.c:8:10: error: unused variable ‘check’ [-Werror=unused-variable]
   char * check = curr;
          ^~~~~
cc1: all warnings being treated as errors
Makefile:10: recipe for target 'kv.o' failed
make: *** [kv.o] Error 1

[31mError: fail to run makefile[0m
[31mCannot continue testing[0m
Overall Grade: F
